--- a/meeeee.html
+++ b/meeeee.html
@@ -7,7 +7,7 @@ body {
 }
 
 body {
-  background-image: url("Pic/a25a.gif");
+  background-image: url("https://github.com/Atallah88/A/blob/main/a25a.gif?raw=true");
   background-repeat: no-repeat;
   background-position: right top;
   margin-right: 200px;
